--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "contentful": "^10.3.4",
+    "management": "^1.0.2",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0"
