--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "contentful": "^10.3.4",
+    "management": "^1.0.2",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0"
