--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "management": "^1.0.2",
     "next": "13.4.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
