--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.17.0",
     "contentful": "^10.3.4",
     "management": "^1.0.2",
     "next": "13.4.9",
