--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "contentful": "^10.3.4",
     "management": "^1.0.2",
     "next": "13.4.9",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0"
   },
