--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.17.0",
     "contentful": "^10.3.4",
     "management": "^1.0.2",
     "next": "13.4.9",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
