--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.17.0",
     "contentful": "^10.3.4",
+    "i": "^0.3.7",
     "management": "^1.0.2",
     "next": "13.4.9",
-    "react": "18.2.0",
+    "next-auth": "^4.22.1",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
