--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.17.0",
+    "@headlessui/react": "^1.7.15",
     "contentful": "^10.3.4",
     "management": "^1.0.2",
     "next": "13.4.9",
