--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@contentful/rich-text-react-renderer": "^15.17.0",
     "@headlessui/react": "^1.7.15",
     "contentful": "^10.3.4",
+    "graphql-request": "^6.1.0",
     "management": "^1.0.2",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
