--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.17.0",
     "@headlessui/react": "^1.7.15",
-    "contentful": "^10.3.4",
+    "contentful": "^10.3.5",
+    "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "management": "^1.0.2",
     "next": "13.4.9",
